--- a/.screenrc
+++ b/.screenrc
@@ -2,5 +2,9 @@ hardstatus on
 hardstatus alwayslastline
 defscrollback 1024
 startup_message off
+term "xterm-256color"
+encoding UTF-8
+altscreen on
+defbce "on"
+vbell off
 hardstatus string "%{.bW}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a "
-
