--- a/termite/config
+++ b/termite/config
@@ -13,7 +13,8 @@ clickable_url           = true
 #font                    = inconsolata-g 7
 #font                    = EnvyCodeR 8
 #font                    = PragmataPro 9
-font                    = Inconsolata 12
+#font                    = Inconsolata 12
+font                    =  DejaVu Sans Mono for Powerline 12
 scrollback_lines        = 5000
 search_wrap             = true
 #geometry                = 400x400
